2013-09-13  Julien Bect  <julien.bect@supelec.fr>

	New approach for the encapsulation of QR-based kriging computations.

	* core/@stk_kriging_equation: removed
	* core/@stk_kreq_qr: new class
	* core/stk_predict.m: modified

2013-09-13  Emmanuel Vazquez  <emmanuel.vazquez@supelec.fr>

	Switch to verbose display mode for examples kb01 and kb02.

	* examples/01_kriging_basics/stk_example_kb01.m: modified
	* examples/01_kriging_basics/stk_example_kb02.m: modified

2013-09-12  Julien Bect  <julien.bect@supelec.fr>

	Control the verbosity of display for dataframe objects.

	* misc/options/stk_options_set.m: modified
	* utils/arrays/@stk_factorialdesign/disp.m: modified
	* utils/arrays/@stk_dataframe/disp.m: modified
	* utils/arrays/@stk_dataframe/display.m: modified
	* stk_init.m: modified

	Display row and column names between simple quotes.

	* utils/arrays/@stk_dataframe/stk_sprintf_colnames.m: modified
	* utils/arrays/@stk_dataframe/stk_sprintf_rownames.m: modified

	stk_param_estim.m: Fix a stupid bug.

	* paramestim/stk_param_estim.m: modified

	Reorganize folders.

	* utils/arrays: new folder
	* utils/arrays/generic: new folder
	* utils/@stk_dataframe: moved to utils/arrays
	* utils/@stk_factorialdesign: moved to utils/arrays
	* utils/@struct: moved to utils/arrays
	* misc/text/stk_sprintf_data.m: moved to utils/arrays/generic
	* misc/text/stk_sprintf_rownames.m: moved to utils/arrays/generic
	* misc/text/stk_sprintf_info.m: moved to utils/arrays/generic
	* misc/text/stk_sprintf_sizetype.m: moved to utils/arrays/generic
	* misc/text/stk_sprintf_colnames.m: moved to utils/arrays/generic
	* utils/stk_rescale.m: moved to utils/arrays/generic
	* utils/stk_normalize.m: moved to utils/arrays/generic
	* misc/config/stk_path.m: modified
	* misc/config/stk_compile_all.m: modified

	Fill .info field after the construction of a dataframe.

	* core/stk_predict.m: modified
	* core/@stk_kriging_equation/stk_predict.m: modified
	* utils/stk_feval.m: modified