@@ -34,7 +34,7 @@ README Copying Permission Statement
 
 o General information
 
-    Version:      2.0.0
+    Version:      2.0.1
 
     Authors:      Julien Bect        <julien.bect@supelec.fr>
                   Emmanuel Vazquez   <emmanuel.vazquez@supelec.fr>
